--- a/JavaScript test.html
+++ b/JavaScript test.html
@@ -30,11 +30,27 @@
      console.log(newString);
      console.log(firstLetter);
      console.log(restOfString);
-     
+
      
 
     </script>
 
+ 
+
+    <script>
+
+    let myWord = prompt('Enter a word. The last letter will be returned.');
+
+    lastLetter(myWord);
+
+    function lastLetter(myWord) {
+    let letter = myWord.slice(-1);
+    console.log(letter);
+    return letter;
+
+    } 
+
+    </script>
    
 </body>
 </html>
